--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# archive
+backup.actions.txt
+backup.scrollReveal.txt
 
 # dependencies
 /node_modules
